force-app/main/default/objects/Onboarding_Task__c/Onboarding_Task__c.object-meta.xml
<CustomObject>
    <label>Onboarding Task</label>
    <nameField>
        <label>Onboarding Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>