force-app/main/default/objects/Onboarding_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Submission</fullName>
            </value>
            <value>
                <fullName>IT Setup</fullName>
            </value>
            <value>
                <fullName>Laptop Allocation</fullName>
            </value>
            <value>
                <fullName>ID Card</fullName>
            </value>
            <value>
                <fullName>System Access</fullName>
            </value>
            <value>
                <fullName>HR Orientation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Background Verification</fullName>
            </value>
            <value>
                <fullName>Payroll Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>